--- a/v2/front/chaea.html
+++ b/v2/front/chaea.html
@@ -45,8 +45,8 @@
         <div class="menu-drop">
           <button type="button" name="drop">Questionários</button>
           <div class="drop-content">
-            <a href="questionario.html">VARK</a>
-            <a href="#">CHAEA</a>
+            <a href="questionario-vark.html">VARK</a>
+            <a href="questionario-chaea.html">CHAEA</a>
           </div>
         </div>
         <li class="nav-item">
