Lógica para o questionário VARK
Não aplicado a todas as questões. Apliquei apenas na primeira questão, até o momento funcional.

--- a/v2/front/questionario-vark.html
+++ b/v2/front/questionario-vark.html
@@ -86,17 +86,17 @@
         <div class="VARKQuestion">
           <div class="VARKQuestionText"><b>Preciso encontrar o caminho para uma loja recomendada por um amigo. Eu:</b><br><br></div>
           <div class="VARKResponse">
-            <label for="C01K"><input type="checkbox" class="VARKResponseCheckbox" id="C01K" name="C01K" value="K" onclick="sw_vark_option_clicked( this );">Descobriria a localização da loja em relação a um local que conheço.<br><br></label>
+            <label for="C01K"><input type="checkbox" class="VARKResponseCheckbox" id="C01K" name="C01K" value="K" onclick="test( this );">Descobriria a localização da loja em relação a um local que conheço.<br><br></label>
           </div>
           <div class="VARKResponse">
-            <label for="C01A"><input type="checkbox" class="VARKResponseCheckbox" id="C01A" name="C01A" value="A" onclick="sw_vark_option_clicked( this );">Pediria ao meu amigo as informações sobre como chegar.</label>
+            <label for="C01A"><input type="checkbox" class="VARKResponseCheckbox" id="C01A" name="C01A" value="A" onclick="test( this );">Pediria ao meu amigo as informações sobre como chegar.</label>
           </div>
           <div class="VARKResponse">
-            <label for="C01R"><input type="checkbox" class="VARKResponseCheckbox" id="C01R" name="C01R" value="R" onclick="sw_vark_option_clicked( this );">Anotaria as informações sobre as ruas que preciso para lembrar.
+            <label for="C01R"><input type="checkbox" class="VARKResponseCheckbox" id="C01R" name="C01R" value="R" onclick="test( this );">Anotaria as informações sobre as ruas que preciso para lembrar.
             </label>
           </div>
           <div class="VARKResponse">
-            <label for="C01V"><input type="checkbox" class="VARKResponseCheckbox" id="C01V" name="C01V" value="V" onclick="sw_vark_option_clicked( this );">Usaria um mapa.</label>
+            <label for="C01V"><input type="checkbox" class="VARKResponseCheckbox" id="C01V" name="C01V" value="V" onclick="test( this );">Usaria um mapa.</label>
           </div>
         </div>
 
