Questionário VARK 100% funcional
possui resposta e retorna ao banco de dados sem nenhum problema

--- a/v2/front/questionario-vark.html
+++ b/v2/front/questionario-vark.html
@@ -73,14 +73,14 @@
 <!-- /page title -->
 
 <section class="section">
-  <div class="container">
+  <div class="container" id="div-external">
     <div class="container">
-      <h3 class="card-title">Questionário VARK</h3>
+      <h3 class="card-title" id="learning">Questionário VARK</h3>
     </div>
     <div class="container">
-      <h5 class="card-title">Traduzido por <a class="text-dark" href="https://www.linkedin.com/in/fernanda-nakamoto-801bb113b/?originalSubdomain=br" target="_blank">Fernanda Nakamoto</a>, São Camilo University Center - 2021 - Vark versão 8.01<br><br></h5>
+      <h5 class="card-title" id="learning-descript">Traduzido por <a class="text-dark" href="https://www.linkedin.com/in/fernanda-nakamoto-801bb113b/?originalSubdomain=br" target="_blank">Fernanda Nakamoto</a>, São Camilo University Center - 2021 - Vark versão 8.01<br><br></h5>
     </div>
-    <div class="container">
+    <div class="container" id="delsection">
       <form>
         <!-- Questão 01 -->
         <div class="VARKQuestion">
