--- a/v2/front/result.html
+++ b/v2/front/result.html
@@ -75,7 +75,7 @@
 <section class="section">
   <div class="container">
     <div class="container">
-        <h3 class="card-title">Seu aprendizado é multimodal!</h3>
+        <h3 class="card-title" id="learning"></h3>
     </div>
     <div class="container">
         <h5 class="card-title">Para melhor aproveitamento utilize as seguintes técnicas de aprendizado:<br><br></h5>
