--- a/v2/front/index.html
+++ b/v2/front/index.html
@@ -3,7 +3,7 @@
 <head>
   
   <meta charset="utf-8">
-  <title>Projeto Vark</title>
+  <title>Projeto VARK</title>
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="Creative Portfolio Template">
