--- a/front/result.html
+++ b/front/result.html
@@ -63,7 +63,7 @@
         <h3 class="card-title" id="learning"></h3>
     </div>
     <div class="container">
-        <h5 class="card-title">Para melhor aproveitamento utilize as seguintes técnicas de aprendizado:<br><br></h5>
+        <h5 class="card-title">Para melhor aproveitamento utilize as seguintes técnicas de aprendizado:<br><br><br><br></h5>
     </div>
     <div class="container">
     </div>
